--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <head>
   <title>Price Guide</title>
-  <link type="text/css" rel="stylesheet" src="/main.css" />
+  <link type="text/css" rel="stylesheet" href="main.css">
   <meta name="robots" content="noindex, nofollow">
 </head>
 <body>
