--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <head>
-  <title>Price Guide</title>
+  <title>Eggshell</title>
   <link type="text/css" rel="stylesheet" href="main.css">
   <meta name="robots" content="noindex, nofollow">
 </head>
